--- a/crates/hello-world/Cargo.toml
+++ b/crates/hello-world/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "hello-world-name"
+name = "hello-world"
 version = "0.1.0"
 authors = ["Tony Alves <tony@3alves.com>"]
 edition = "2018"
