--- a/netlify/functions/hello-world/Cargo.toml
+++ b/netlify/functions/hello-world/Cargo.toml
@@ -1,14 +1,16 @@
 [package]
-edition = "2018"
+edition = "2021"
 name = "hello-world"
 version = "0.1.0"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-aws_lambda_events = "0.4.0"
-http = "0.2.4"
-lambda_runtime = "0.3.0"
-log = "0.4.14"
-simple_logger = "1.11.0"
-tokio = "1.6.1"
+tokio = { version = "1", features = ["macros"] }
+tracing = { version = "0.1", features = ["log"] }
+tracing-subscriber = { version = "0.3", default-features = false, features = [
+    "fmt",
+] }
+serde = { version = "1.0.188", features = ["derive"] }
+serde_json = { version = "1.0.106", features = ["raw_value"] }
+rand = "0.8.5"
+url = "2.4.1"
+vercel_runtime = "1.1.3"
