--- a/netlify/functions/hello-world/Cargo.toml
+++ b/netlify/functions/hello-world/Cargo.toml
@@ -13,4 +13,4 @@ serde = { version = "1.0.188", features = ["derive"] }
 serde_json = { version = "1.0.106", features = ["raw_value"] }
 rand = "0.8.5"
 url = "2.4.1"
-vercel_runtime = "1.1.3"
+vercel_runtime = { version = "1.1.0", path = "../../crates/vercel_runtime" }
